--- a/ims-web/src/styles/global.scss
+++ b/ims-web/src/styles/global.scss
@@ -38,7 +38,7 @@ body {
   }
 
   body {
-    overscroll-behavior-y: contain;
+    overscroll-behavior-y: auto;
   }
 }
 
